--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>bootstrap</title>
+    <title>mi club BT</title>
 </head>
 <body>
     
@@ -21,10 +21,9 @@
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              <a class="nav-link active" href="./secciones/actividades.html">actividades</a>
-              <a class="nav-link active" href="#">servicios</a>
-              <a class="nav-link active" href="#">sociales</a>
-              <a class="nav-link active" href="#">contacto</a>
+              <a class="nav-link active" href="./secciones/actividades.html">Actividades</a>
+              <a class="nav-link active" href="./secciones/sociales.html">Sociales</a>
+              <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
             </div>
           </div>
         </div>
