--- a/secciones/sociales.html
+++ b/secciones/sociales.html
@@ -9,34 +9,31 @@
     <title>mi club BT</title>
 </head>
 <body>
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-              <img src="../img/escudo.jpg" alt="escudo" class="w-25">
+              <img src="./img/escudo.jpg" alt="escudo" class="w-25">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link active" href="./actividades.html">actividades</a>
-                <a class="nav-link active" href="./sociales.html">sociales</a>
-                <a class="nav-link active" href="./contacto.html">contacto</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+              <a class="nav-link active" href="./actividades.html">actividades</a>
+              <a class="nav-link active" href="./sociales.html">sociales</a>
+              <a class="nav-link active" href="./contacto.html">contacto</a>
             </div>
           </div>
         </div>
       </nav>
 
-      <section>
-          <h1 class="text-center mt-3">bienvenidos en Club del Banco Ciudad</h1>
-      </section>
-
-
     <footer>
 
     </footer>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
