--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -6,31 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/9c1b3e43e6.js" crossorigin="anonymous"></script>
     <title>mi club BT</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-              <img src="./img/escudo.jpg" alt="escudo" class="w-25">
+              <img src="../img/escudo.jpg" alt="escudo" class="w-25">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link active" href="./actividades.html">actividades</a>
-                <a class="nav-link active" href="./sociales.html">sociales</a>
-                <a class="nav-link active" href="./contacto.html">contacto</a>
+                <a class="nav-link active fs-1" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link active fs-1" href="./actividades.html">Actividades</a>
+                <a class="nav-link active fs-1" href="./sociales.html">Sociales</a>
+                <a class="nav-link active fs-1" href="./contacto.html">Contacto</a>
             </div>
           </div>
         </div>
       </nav>
 
-    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col border border-dark m-2">
+            <div class="imagen">
+                <h1>Hola... veni a conocernos en facebook.</h1>
+                <img src="../img/facebook.jpg" width="100%"  alt="imagen">
+               <p>Lorem ipsum dolor, sitLorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. <br>
+               <p>ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.</p>
+            </div>
+          </div>
+          <div class="col border border-dark m-2">
+            <div class="imagen">
+                <h1>tambien estamos en instagram</h1>
+                <img src="../img/instagram.jpg" width="100%"  alt="imagen">
+               <p>Lorem ipsum dolor, sitLorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. <br>
+               <p>ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.</p>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    </footer>
+      <aside class="sidebar border border-dark m-2">
+        <h3 class="m-2">HACETE SOCIO .... MANDANOS UN MAIL ... APROVECHA NUESTROS BENEFICIOS E INTALACIONES</h3>
+        <p class="m-3 d-flex justify-content-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis alias animi quia, temporibus culpa aut quisquam beatae praesentium? Tempore hic tempora aliquid porro, consectetur odio pariatur asperiores nam dolor molestiae?</p>
+        </aside>
+
+        <form class="row g-3 border border-dark m-2">
+            <div class="col-md-4">
+              <label for="validationDefault01" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="validationDefault01" value="Nombre" required>
+            </div>
+            <div class="col-md-4">
+              <label for="validationDefault02" class="form-label">Apellido</label>
+              <input type="text" class="form-control" id="validationDefault02" value="Apellido" required>
+            </div>
+            <div class="col-md-4">
+              <label for="validationDefaultUsername" class="form-label">Correo</label>
+              <div class="input-group">
+                <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                <input type="text" class="form-control" id="validationDefaultUsername"  aria-describedby="inputGroupPrepend2" required>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <label for="validationDefault03" class="form-label">Ciudad</label>
+              <input type="text" class="form-control" id="validationDefault03" required>
+            </div>
+            <div class="col-md-3">
+              <label for="validationDefault04" class="form-label">Provincia</label>
+              <select class="form-select" id="validationDefault04" required>
+                <option selected disabled value="">elegi</option>
+                <option>...</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <label for="validationDefault05" class="form-label">CP</label>
+              <input type="text" class="form-control" id="validationDefault05" required>
+            </div>
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                <label class="form-check-label" for="invalidCheck2">
+                    Acepta términos y condiciones
+                </label>
+              </div>
+            </div>
+            <div class="col-12">
+              <button class="btn btn-primary" type="submit">enviar.. asi nos contactamos</button>
+            </div>
+          </form>
+
+      <footer>
+        <div class="containerfooterindex">
+          <div class="row dark">
+            <div class="col-lg-6">
+              <p>E. Madero 1599. C.P. 1638 - Vicente López Provincia de Buenos Aires Tel: 4791-2132 / 4796-4334 Horario de actividad: Martes a Domingo de 8 a 20 hs.
+      
+                Copyright © 2018 Club de la Mututal de la Asociación de Empleados del Banco de la Ciudad de Buenos Aires. Todos los </p>
+            <h3 class="redes">Seginos</h3>
+            <p><i class="fa-brands fa-facebook-f"></i> Facebook</p>
+            <p><i class="fa-brands fa-instagram"></i> Instagram</p>
+            <p><i class="fa-brands fa-twitter"></i> Twitter</p>
+            </div>
+            <div class="col-lg-6">
+              <h3>Donde estamos... </h3>
+                  <img src="../img/mapa.jpg" width="100%"  alt="imagen">
+            </div>
+          </div>
+        </div>
+      </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
