--- a/index.html
+++ b/index.html
@@ -6,36 +6,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
+    <script src="https://kit.fontawesome.com/9c1b3e43e6.js" crossorigin="anonymous"></script>
     <title>mi club BT</title>
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-              <img src="./img/escudo.jpg" alt="escudo" class="w-25">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              <a class="nav-link active" href="./secciones/actividades.html">Actividades</a>
-              <a class="nav-link active" href="./secciones/sociales.html">Sociales</a>
-              <a class="nav-link active" href="./secciones/contacto.html">Contacto</a>
-            </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+          <img src="./img/escudo.jpg" alt="escudo" class="w-25">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active fs-1" aria-current="page" href="./index.html">Home</a>
+          <a class="nav-link active fs-1" href="./secciones/actividades.html">Actividades</a>
+          <a class="nav-link active fs-1" href="./secciones/sociales.html">Sociales</a>
+          <a class="nav-link active fs-1" href="./secciones/contacto.html">Contacto</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-12 border border-dark">
+        <div class="card">
+          <div class="card-body text-center border border-dark m-3">
+              <h1>Asociacion Empleados Banco Ciudad Bs. As.</h1>
           </div>
         </div>
-      </nav>
+      <div id="carouselExampleControls" class="carousel slide m-2" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./img/solarium.jpg" class="d-block w-100" alt="solarium">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/juegos.jpg" class="d-block w-100" alt="juegos">
+            </div>
+            <div class="carousel-item">
+              <img src="./img/mi club1.jpg" class="d-block w-100" alt="club">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      <p>Lorem ipsum dolor, sitLorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. <br>
+         <p>ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem. amet consectetur adipisicing elit. Eius cupiditate totam, saepe, dignissimos minima veniam, iusto nisi ut nulla impedit repellat inventore officiis ad. Ipsa vero nulla iste dolores exercitationem.</p>
+         <img src="./img/mi club1.jpg" width="100%"  alt="imagen">
+      </div>
+      <div class="col-lg-4 col-md-12 border border-dark">
+        <h3>Actividades</h3>
+            <article>
+                <img src="./img/futbol.jpg" width="100%" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eos cum ratione? Cum perferendis error, dolorum dicta placeat fuga aliquid alias, tempore tenetur iure debitis vel nostrum possimus! Corrupti, saepe!</p>
+            </article>
+            <article>
+                <img src="./img/rugby.jpg" width="100%" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eos cum ratione? Cum perferendis error, dolorum dicta placeat fuga aliquid alias, tempore tenetur iure debitis vel nostrum possimus! Corrupti, saepe!</p>
+            </article>
+            <article>
+                <img src="./img/hockey.jpg" width="100%" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed eos cum ratione? Cum perferendis error, dolorum dicta placeat fuga aliquid alias, tempore tenetur iure debitis vel nostrum possimus! Corrupti, saepe!</p>
+            </article>
+      </div>
+    </div>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="row m-3">
+      <div class="col">
+        <button type="button" class="btn btn-dark">COLONIA VERANO ... Termporada 2022 ... Anotate ... informate aca</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-dark">HACETE SOCIO ... disfruta de nuestras intalaciones ... informarte aca</button>
+      </div>
+      <div class="col">
+        <button type="button" class="btn btn-dark">BENEFICIOS para todos nuetros sociales ... informate aca</button>
+      </div>
+    </div>
+  </div>
 
-
-
-
+  
 
 
 <footer>
+  <div class="containerfooterindex">
+    <div class="row dark">
+      <div class="col-lg-6">
+        <p>E. Madero 1599. C.P. 1638 - Vicente López Provincia de Buenos Aires Tel: 4791-2132 / 4796-4334 Horario de actividad: Martes a Domingo de 8 a 20 hs.
 
+          Copyright © 2018 Club de la Mututal de la Asociación de Empleados del Banco de la Ciudad de Buenos Aires. Todos los </p>
+      <h3 class="redes">Seginos</h3>
+      <p><i class="fa-brands fa-facebook-f"></i> Facebook</p>
+      <p><i class="fa-brands fa-instagram"></i> Instagram</p>
+      <p><i class="fa-brands fa-twitter"></i> Twitter</p>
+      </div>
+      <div class="col-lg-6">
+        <h3>Donde estamos... </h3>
+            <img src="./img/mapa.jpg" width="100%"  alt="imagen">
+      </div>
+    </div>
+  </div>
 </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
