--- a/secciones/actividades.html
+++ b/secciones/actividades.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/9c1b3e43e6.js" crossorigin="anonymous"></script>
     <title>mi club BT</title>
 </head>
 <body>
@@ -20,23 +21,87 @@
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                <a class="nav-link active" href="./actividades.html">actividades</a>
-                <a class="nav-link active" href="./sociales.html">sociales</a>
-                <a class="nav-link active" href="./contacto.html">contacto</a>
+                <a class="nav-link active fs-1" aria-current="page" href="../index.html">Home</a>
+                <a class="nav-link active fs-1" href="./actividades.html">Actividades</a>
+                <a class="nav-link active fs-1" href="./sociales.html">Sociales</a>
+                <a class="nav-link active fs-1" href="./contacto.html">Contacto</a>
             </div>
           </div>
         </div>
       </nav>
 
       <section>
-          <h1 class="text-center mt-3">bienvenidos en Club del Banco Ciudad</h1>
+          <h1 class="text-center mt-3">Nuestras actividades</h1>
       </section>
 
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 90%;">
+              <img src="../img/futbol.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">FUTBOL</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo placeat cumque provident in porro nulla consectetur quas labore. Cumque velit repudiandae soluta fugit explicabo enim eum corrupti quaerat, sunt consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quis pariatur animi blanditiis excepturi, fugit atque? Qui atque et at necessitatibus quidem, soluta totam ducimus non fuga magnam nisi tempore. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mas info...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 90%;">
+              <img src="../img/hockey.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">HOCKEY</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo placeat cumque provident in porro nulla consectetur quas labore. Cumque velit repudiandae soluta fugit explicabo enim eum corrupti quaerat, sunt consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quis pariatur animi blanditiis excepturi, fugit atque? Qui atque et at necessitatibus quidem, soluta totam ducimus non fuga magnam nisi tempore. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mas info...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card" style="width: 90%;">
+              <img src="../img/natacion.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">NATACION</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo placeat cumque provident in porro nulla consectetur quas labore. Cumque velit repudiandae soluta fugit explicabo enim eum corrupti quaerat, sunt consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quis pariatur animi blanditiis excepturi, fugit atque? Qui atque et at necessitatibus quidem, soluta totam ducimus non fuga magnam nisi tempore. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mas info...</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card" style="width: 90%;">
+              <img src="../img/natacion.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">RUGBY</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo placeat cumque provident in porro nulla consectetur quas labore. Cumque velit repudiandae soluta fugit explicabo enim eum corrupti quaerat, sunt consequatur? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae quis pariatur animi blanditiis excepturi, fugit atque? Qui atque et at necessitatibus quidem, soluta totam ducimus non fuga magnam nisi tempore. Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">Mas info...</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    <footer>
-
-    </footer>
+      <footer>
+        <div class="containerfooterindex">
+          <div class="row dark">
+            <div class="col-lg-6">
+              <p>E. Madero 1599. C.P. 1638 - Vicente López Provincia de Buenos Aires Tel: 4791-2132 / 4796-4334 Horario de actividad: Martes a Domingo de 8 a 20 hs.
+      
+                Copyright © 2018 Club de la Mututal de la Asociación de Empleados del Banco de la Ciudad de Buenos Aires. Todos los </p>
+            <h3 class="redes">Seginos</h3>
+            <p><i class="fa-brands fa-facebook-f"></i> Facebook</p>
+            <p><i class="fa-brands fa-instagram"></i> Instagram</p>
+            <p><i class="fa-brands fa-twitter"></i> Twitter</p>
+            </div>
+            <div class="col-lg-6">
+              <h3>Donde estamos... </h3>
+                  <img src="../img/mapa.jpg" width="100%"  alt="imagen">
+            </div>
+          </div>
+        </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     
