--- a/secciones/sociales.html
+++ b/secciones/sociales.html
@@ -6,31 +6,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/9c1b3e43e6.js" crossorigin="anonymous"></script>
     <title>mi club BT</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-              <img src="./img/escudo.jpg" alt="escudo" class="w-25">
+              <img src="../img/escudo.jpg" alt="escudo" class="w-25">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              <a class="nav-link active" href="./actividades.html">actividades</a>
-              <a class="nav-link active" href="./sociales.html">sociales</a>
-              <a class="nav-link active" href="./contacto.html">contacto</a>
+              <a class="nav-link active fs-1" aria-current="page" href="../index.html">Home</a>
+              <a class="nav-link active fs-1" href="./actividades.html">Actividades</a>
+              <a class="nav-link active fs-1" href="./sociales.html">Sociales</a>
+              <a class="nav-link active fs-1" href="./contacto.html">Contacto</a>
             </div>
           </div>
         </div>
       </nav>
 
-    <footer>
+      <div class="bufet border border-dark m-2">
+        <h1 class="m-3">bufet</h1>
+        <p class="m-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur officiis, ratione cum dolorem ut accusantium placeat, provident quos vel sunt consectetur, mollitia quas iure eligendi nam! Accusamus corporis sequi quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure explicabo dolorem laborum non. Eligendi velit officia a libero, voluptatum ut explicabo excepturi minima rerum nostrum nesciunt dolor vero itaque repudiandae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum iste quidem voluptatum, quisquam blanditiis, mollitia fugiat possimus doloremque recusandae modi, adipisci iusto doloribus veritatis ut magnam quae. Non, at deserunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium, porro iusto repellat quod in totam recusandae veritatis similique, itaque eius quasi architecto saepe modi. Iure omnis illo optio tenetur inventore! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laboriosam cupiditate, omnis quaerat sunt, neque fugit doloremque non ab quae nostrum ad sed, consectetur dolore praesentium odit repellat iste! Quam, cum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio dignissimos, impedit fugit iste modi, provident vel nam in a corporis cum eum ullam laudantium blanditiis reprehenderit quisquam maxime consectetur beatae.</p>
+    </div>
+    <div class="solarium border border-dark m-2">
+        <h1 class="m-3">parque con solarium</h1>
+        <p class="m-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci quam dicta distinctio aperiam alias porro, provident modi nobis perspiciatis eveniet commodi cupiditate possimus, ratione ex illo voluptate consequatur autem obcaecati. Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda iure tempore tenetur illum, rem recusandae eius! Tempore natus reiciendis corporis ex dolores laboriosam dolor rem, maiores fuga ut temporibus esse.</p>
+    </div>
+    <div class="juegos border border-dark m-2">
+        <h1 class="m-3">juegos</h1>
+        <p class="m-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptate eveniet unde nemo mollitia, ipsam maxime molestiae itaque id quibusdam consectetur inventore vitae sunt, sint perspiciatis ex nihil saepe possimus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, vel facilis sed culpa repellat nostrum est, consequuntur ratione nemo ipsa nesciunt. Fuga ipsum soluta provident ducimus possimus, atque vero ab?</p>
+    </div>
+    <div class="nuevas border border-dark m-2">
+        <h1 class="m-3">instalaciones nuevas</h1>
+        <p class="m-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit minus perspiciatis mollitia natus placeat non, autem laborum molestias cupiditate eligendi quidem ducimus laboriosam dolore blanditiis dicta vero perferendis at accusamus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi dolore perferendis iusto tempore, ab similique corporis tempora unde. Eum vitae repellendus qui dolorem quidem iure vero eius obcaecati nostrum a! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero ipsum fugiat odit repellat! Excepturi quos mollitia doloremque aut, cum qui repellendus pariatur itaque officiis aperiam quidem voluptatibus voluptas quibusdam maiores. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus mollitia magnam, dolorum dolor deserunt non perferendis illo asperiores odit velit. Libero veniam magni incidunt voluptas dolor maiores quam sint et. Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae ipsa dolores eius maxime ab ex porro, necessitatibus cupiditate minima unde dicta est et sapiente nulla, asperiores deserunt dolorem id laboriosam.</p>
+    </div>
 
-    </footer>
+      <footer>
+        <div class="containerfooterindex">
+          <div class="row dark">
+            <div class="col-lg-6">
+              <p>E. Madero 1599. C.P. 1638 - Vicente López Provincia de Buenos Aires Tel: 4791-2132 / 4796-4334 Horario de actividad: Martes a Domingo de 8 a 20 hs.
+      
+                Copyright © 2018 Club de la Mututal de la Asociación de Empleados del Banco de la Ciudad de Buenos Aires. Todos los </p>
+            <h3 class="redes">Seginos</h3>
+            <p><i class="fa-brands fa-facebook-f"></i> Facebook</p>
+            <p><i class="fa-brands fa-instagram"></i> Instagram</p>
+            <p><i class="fa-brands fa-twitter"></i> Twitter</p>
+            </div>
+            <div class="col-lg-6">
+              <h3>Donde estamos... </h3>
+                  <img src="../img/mapa.jpg" width="100%"  alt="imagen">
+            </div>
+          </div>
+        </div>
+      </footer>
 
 
 
